docs: update docs

--- a/comicgeeks/index.html
+++ b/comicgeeks/index.html
@@ -59,7 +59,7 @@
 				<a href="#comicgeeks" id="comicgeeks" style="color: inherit; text-decoration: none;">
 					<h1>comicgeeks</h1>
 				</a>
-				<p>A NodeJS module to get public data from League of Comic Geeks</p>
+				<p>A NodeJS module to get data from League of Comic Geeks</p>
 				<pre><code class="language-bash"><span style="color: #000000">npm install comicgeeks </span>
 </code></pre>
 				<a href="#features" id="features" style="color: inherit; text-decoration: none;">
