--- a/comicgeeks/interfaces/fetchoptions.html
+++ b/comicgeeks/interfaces/fetchoptions.html
@@ -101,7 +101,7 @@
 					<div class="tsd-signature tsd-kind-icon">filter<span class="tsd-signature-symbol">:</span> <a href="../enums/filtertypes.html" class="tsd-signature-type" data-tsd-kind="Enumeration">FilterTypes</a><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:31</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L31">lib/interfaces.ts:31</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -116,7 +116,7 @@
 					<div class="tsd-signature tsd-kind-icon">publishers<span class="tsd-signature-symbol">:</span> <a href="../modules.html#publisherresolvable" class="tsd-signature-type" data-tsd-kind="Type alias">PublisherResolvable</a><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:26</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L26">lib/interfaces.ts:26</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -131,7 +131,7 @@
 					<div class="tsd-signature tsd-kind-icon">sort<span class="tsd-signature-symbol">:</span> <a href="../enums/sorttypes.html" class="tsd-signature-type" data-tsd-kind="Enumeration">SortTypes</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:36</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L36">lib/interfaces.ts:36</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
