--- a/comicgeeks/enums/collectiontypes.html
+++ b/comicgeeks/enums/collectiontypes.html
@@ -98,7 +98,7 @@
 					<div class="tsd-signature tsd-kind-icon">Issue<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;issue&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/constants.ts:18</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/constants.ts#L18">lib/constants.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -108,7 +108,7 @@
 					<div class="tsd-signature tsd-kind-icon">Series<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;series&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/constants.ts:19</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/constants.ts#L19">lib/constants.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
