--- a/comicgeeks/enums/sorttypes.html
+++ b/comicgeeks/enums/sorttypes.html
@@ -113,7 +113,7 @@
 					<div class="tsd-signature tsd-kind-icon">Alpha<wbr>Asc<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;alpha-asc&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/constants.ts:66</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/constants.ts#L66">lib/constants.ts:66</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -123,7 +123,7 @@
 					<div class="tsd-signature tsd-kind-icon">Alpha<wbr>Desc<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;alpha-desc&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/constants.ts:67</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/constants.ts#L67">lib/constants.ts:67</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -133,7 +133,7 @@
 					<div class="tsd-signature tsd-kind-icon">Community<wbr>Consensus<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;community&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/constants.ts:70</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/constants.ts#L70">lib/constants.ts:70</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -143,7 +143,7 @@
 					<div class="tsd-signature tsd-kind-icon">High<wbr>Price<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;price-desc&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/constants.ts:69</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/constants.ts#L69">lib/constants.ts:69</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -153,7 +153,7 @@
 					<div class="tsd-signature tsd-kind-icon">Low<wbr>Price<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;price-asc&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/constants.ts:68</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/constants.ts#L68">lib/constants.ts:68</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -163,7 +163,7 @@
 					<div class="tsd-signature tsd-kind-icon">Most<wbr>Pulled<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;pulls&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/constants.ts:64</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/constants.ts#L64">lib/constants.ts:64</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -173,7 +173,7 @@
 					<div class="tsd-signature tsd-kind-icon">Pick<wbr>OfThe<wbr>Week<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;potw&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/constants.ts:65</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/constants.ts#L65">lib/constants.ts:65</a></li>
 						</ul>
 					</aside>
 				</section>
