--- a/comicgeeks/interfaces/comic.html
+++ b/comicgeeks/interfaces/comic.html
@@ -107,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">cover<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:86</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L86">lib/interfaces.ts:86</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -122,7 +122,7 @@
 					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:91</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L91">lib/interfaces.ts:91</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -137,7 +137,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:71</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L71">lib/interfaces.ts:71</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -152,7 +152,7 @@
 					<div class="tsd-signature tsd-kind-icon">potw<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:111</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L111">lib/interfaces.ts:111</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -167,7 +167,7 @@
 					<div class="tsd-signature tsd-kind-icon">price<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:96</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L96">lib/interfaces.ts:96</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -182,7 +182,7 @@
 					<div class="tsd-signature tsd-kind-icon">publisher<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:76</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L76">lib/interfaces.ts:76</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -197,7 +197,7 @@
 					<div class="tsd-signature tsd-kind-icon">pulls<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:106</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L106">lib/interfaces.ts:106</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -212,7 +212,7 @@
 					<div class="tsd-signature tsd-kind-icon">rating<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:101</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L101">lib/interfaces.ts:101</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -227,7 +227,7 @@
 					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:81</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L81">lib/interfaces.ts:81</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
