--- a/comicgeeks/interfaces/user.html
+++ b/comicgeeks/interfaces/user.html
@@ -102,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">avatar<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:61</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L61">lib/interfaces.ts:61</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -117,7 +117,7 @@
 					<div class="tsd-signature tsd-kind-icon">id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:46</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L46">lib/interfaces.ts:46</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -132,7 +132,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:51</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L51">lib/interfaces.ts:51</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -147,7 +147,7 @@
 					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/interfaces.ts:56</li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/9f6ed7e/src/lib/interfaces.ts#L56">lib/interfaces.ts:56</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
