docs: update docs

--- a/comicgeeks/index.html
+++ b/comicgeeks/index.html
@@ -136,7 +136,7 @@
 <span style="color: #008000">{</span>
 <span style="color: #008000">    id: 122444,</span>
 <span style="color: #008000">    name: &#039;maruf99&#039;,</span>
-<span style="color: #008000">    url: &#039;https://leagueofcomicgeeks.com/profile/maruf99/pull-list&#039;,</span>
+<span style="color: #008000">    url: &#039;https://leagueofcomicgeeks.com/profile/maruf99&#039;,</span>
 <span style="color: #008000">    avatar: &#039;https://s3.amazonaws.com/comicgeeks/avatars/large-122444.jpg?t=1609863575&#039;</span>
 <span style="color: #008000">}</span>
 <span style="color: #008000"> */</span>
