docs: update docs build

--- a/comicgeeks/enums/collectiontypes.html
+++ b/comicgeeks/enums/collectiontypes.html
@@ -98,7 +98,7 @@
 					<div class="tsd-signature tsd-kind-icon">Issue<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;issue&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/constants.ts#L15">lib/constants.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/constants.ts#L15">lib/constants.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -108,7 +108,7 @@
 					<div class="tsd-signature tsd-kind-icon">Series<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;series&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/constants.ts#L16">lib/constants.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/constants.ts#L16">lib/constants.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -160,7 +160,7 @@
 					<li class=" tsd-kind-type-alias">
 						<a href="../modules.html#publisherresolvable" class="tsd-kind-icon">Publisher<wbr>Resolvable</a>
 					</li>
-					<li class=" tsd-kind-property">
+					<li class=" tsd-kind-variable">
 						<a href="../modules.html#publishers" class="tsd-kind-icon">Publishers</a>
 					</li>
 					<li class=" tsd-kind-function">
