--- a/comicgeeks/interfaces/comic.html
+++ b/comicgeeks/interfaces/comic.html
@@ -107,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">cover<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L88">lib/interfaces.ts:88</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L87">lib/interfaces.ts:87</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -122,7 +122,7 @@
 					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L93">lib/interfaces.ts:93</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L92">lib/interfaces.ts:92</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -137,7 +137,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L73">lib/interfaces.ts:73</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L72">lib/interfaces.ts:72</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -152,7 +152,7 @@
 					<div class="tsd-signature tsd-kind-icon">potw<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L113">lib/interfaces.ts:113</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L112">lib/interfaces.ts:112</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -167,7 +167,7 @@
 					<div class="tsd-signature tsd-kind-icon">price<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L98">lib/interfaces.ts:98</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L97">lib/interfaces.ts:97</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -182,7 +182,7 @@
 					<div class="tsd-signature tsd-kind-icon">publisher<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L78">lib/interfaces.ts:78</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L77">lib/interfaces.ts:77</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -197,7 +197,7 @@
 					<div class="tsd-signature tsd-kind-icon">pulls<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L108">lib/interfaces.ts:108</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L107">lib/interfaces.ts:107</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -212,7 +212,7 @@
 					<div class="tsd-signature tsd-kind-icon">rating<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L103">lib/interfaces.ts:103</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L102">lib/interfaces.ts:102</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -227,7 +227,7 @@
 					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L83">lib/interfaces.ts:83</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L82">lib/interfaces.ts:82</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -305,7 +305,7 @@
 					<li class=" tsd-kind-type-alias">
 						<a href="../modules.html#publisherresolvable" class="tsd-kind-icon">Publisher<wbr>Resolvable</a>
 					</li>
-					<li class=" tsd-kind-property">
+					<li class=" tsd-kind-variable">
 						<a href="../modules.html#publishers" class="tsd-kind-icon">Publishers</a>
 					</li>
 					<li class=" tsd-kind-function">
