--- a/comicgeeks/enums/filtertypes.html
+++ b/comicgeeks/enums/filtertypes.html
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">Annual<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 6</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/constants.ts#L40">lib/constants.ts:40</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/constants.ts#L40">lib/constants.ts:40</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -120,7 +120,7 @@
 					<div class="tsd-signature tsd-kind-icon">Digital<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 5</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/constants.ts#L39">lib/constants.ts:39</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/constants.ts#L39">lib/constants.ts:39</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -130,7 +130,7 @@
 					<div class="tsd-signature tsd-kind-icon">Hardcover<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 4</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/constants.ts#L38">lib/constants.ts:38</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/constants.ts#L38">lib/constants.ts:38</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -140,7 +140,7 @@
 					<div class="tsd-signature tsd-kind-icon">Regular<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 1</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/constants.ts#L35">lib/constants.ts:35</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/constants.ts#L35">lib/constants.ts:35</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -150,7 +150,7 @@
 					<div class="tsd-signature tsd-kind-icon">Trade<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 3</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/constants.ts#L37">lib/constants.ts:37</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/constants.ts#L37">lib/constants.ts:37</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -160,7 +160,7 @@
 					<div class="tsd-signature tsd-kind-icon">Variant<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 2</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/constants.ts#L36">lib/constants.ts:36</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/constants.ts#L36">lib/constants.ts:36</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -224,7 +224,7 @@
 					<li class=" tsd-kind-type-alias">
 						<a href="../modules.html#publisherresolvable" class="tsd-kind-icon">Publisher<wbr>Resolvable</a>
 					</li>
-					<li class=" tsd-kind-property">
+					<li class=" tsd-kind-variable">
 						<a href="../modules.html#publishers" class="tsd-kind-icon">Publishers</a>
 					</li>
 					<li class=" tsd-kind-function">
