--- a/comicgeeks/index.html
+++ b/comicgeeks/index.html
@@ -209,7 +209,7 @@
 					<li class=" tsd-kind-type-alias">
 						<a href="modules.html#publisherresolvable" class="tsd-kind-icon">Publisher<wbr>Resolvable</a>
 					</li>
-					<li class=" tsd-kind-property">
+					<li class=" tsd-kind-variable">
 						<a href="modules.html#publishers" class="tsd-kind-icon">Publishers</a>
 					</li>
 					<li class=" tsd-kind-function">
