--- a/comicgeeks/interfaces/fetchoptions.html
+++ b/comicgeeks/interfaces/fetchoptions.html
@@ -101,7 +101,7 @@
 					<div class="tsd-signature tsd-kind-icon">filter<span class="tsd-signature-symbol">:</span> <a href="../enums/filtertypes.html" class="tsd-signature-type" data-tsd-kind="Enumeration">FilterTypes</a><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L33">lib/interfaces.ts:33</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L32">lib/interfaces.ts:32</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -113,10 +113,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="publishers" class="tsd-anchor"></a>
 					<h3>publishers</h3>
-					<div class="tsd-signature tsd-kind-icon">publishers<span class="tsd-signature-symbol">:</span> <a href="../modules.html#publisherresolvable" class="tsd-signature-type" data-tsd-kind="Type alias">PublisherResolvable</a><span class="tsd-signature-symbol">[]</span></div>
+					<div class="tsd-signature tsd-kind-icon">publishers<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L28">lib/interfaces.ts:28</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L27">lib/interfaces.ts:27</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -131,7 +131,7 @@
 					<div class="tsd-signature tsd-kind-icon">sort<span class="tsd-signature-symbol">:</span> <a href="../enums/sorttypes.html" class="tsd-signature-type" data-tsd-kind="Enumeration">SortTypes</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L38">lib/interfaces.ts:38</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L37">lib/interfaces.ts:37</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -191,7 +191,7 @@
 					<li class=" tsd-kind-type-alias">
 						<a href="../modules.html#publisherresolvable" class="tsd-kind-icon">Publisher<wbr>Resolvable</a>
 					</li>
-					<li class=" tsd-kind-property">
+					<li class=" tsd-kind-variable">
 						<a href="../modules.html#publishers" class="tsd-kind-icon">Publishers</a>
 					</li>
 					<li class=" tsd-kind-function">
