--- a/comicgeeks/interfaces/user.html
+++ b/comicgeeks/interfaces/user.html
@@ -102,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">avatar<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L63">lib/interfaces.ts:63</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L62">lib/interfaces.ts:62</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -117,7 +117,7 @@
 					<div class="tsd-signature tsd-kind-icon">id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L48">lib/interfaces.ts:48</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L47">lib/interfaces.ts:47</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -132,7 +132,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L53">lib/interfaces.ts:53</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L52">lib/interfaces.ts:52</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -147,7 +147,7 @@
 					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/88c97da/src/lib/interfaces.ts#L58">lib/interfaces.ts:58</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/fb011d5/src/lib/interfaces.ts#L57">lib/interfaces.ts:57</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -210,7 +210,7 @@
 					<li class=" tsd-kind-type-alias">
 						<a href="../modules.html#publisherresolvable" class="tsd-kind-icon">Publisher<wbr>Resolvable</a>
 					</li>
-					<li class=" tsd-kind-property">
+					<li class=" tsd-kind-variable">
 						<a href="../modules.html#publishers" class="tsd-kind-icon">Publishers</a>
 					</li>
 					<li class=" tsd-kind-function">
