docs: update docs build

--- a/comicgeeks/index.html
+++ b/comicgeeks/index.html
@@ -88,6 +88,7 @@
 				</ul>
 				<p>Each method returns a Promise that resolves with the data. Here are a few examples:</p>
 				<pre><code class="language-js"><span style="color: #0000FF">const</span><span style="color: #000000"> { </span><span style="color: #0070C1">fetchReleases</span><span style="color: #000000">, </span><span style="color: #0070C1">FilterTypes</span><span style="color: #000000"> } = </span><span style="color: #795E26">require</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;comicgeeks&#039;</span><span style="color: #000000">);</span>
+<span style="color: #008000">// ES Module or TypeScript: import { fetchReleases, FilterTypes } from &#039;comicgeeks&#039;;</span>
 
 <span style="color: #008000">// Fetch regular, digital, and annual DC Comics issues that released on 2020-12-15, and sort them alphabetically</span>
 <span style="color: #795E26">fetchReleases</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;2020-12-15&#039;</span><span style="color: #000000">, {</span>
