docs: update docs

--- a/comicgeeks/modules.html
+++ b/comicgeeks/modules.html
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">Date<wbr>Resolvable<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Date</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/91e527d/src/lib/interfaces.ts#L123">lib/interfaces.ts:123</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/07c8305/src/lib/interfaces.ts#L123">lib/interfaces.ts:123</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -125,7 +125,7 @@
 					<div class="tsd-signature tsd-kind-icon">Publisher<wbr>Resolvable<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-symbol">keyof </span><span class="tsd-signature-symbol">typeof </span><a href="modules.html#publishers" class="tsd-signature-type" data-tsd-kind="Variable">Publishers</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/91e527d/src/lib/interfaces.ts#L118">lib/interfaces.ts:118</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/07c8305/src/lib/interfaces.ts#L118">lib/interfaces.ts:118</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -143,7 +143,7 @@
 					<div class="tsd-signature tsd-kind-icon">Publishers<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/91e527d/src/lib/constants.ts#L73">lib/constants.ts:73</a></li>
+							<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/07c8305/src/lib/constants.ts#L73">lib/constants.ts:73</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -165,7 +165,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/91e527d/src/lib/methods.ts#L159">lib/methods.ts:159</a></li>
+									<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/07c8305/src/lib/methods.ts#L159">lib/methods.ts:159</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -219,7 +219,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/91e527d/src/lib/methods.ts#L132">lib/methods.ts:132</a></li>
+									<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/07c8305/src/lib/methods.ts#L132">lib/methods.ts:132</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -272,7 +272,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/91e527d/src/lib/methods.ts#L106">lib/methods.ts:106</a></li>
+									<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/07c8305/src/lib/methods.ts#L106">lib/methods.ts:106</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -326,7 +326,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/91e527d/src/lib/methods.ts#L206">lib/methods.ts:206</a></li>
+									<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/07c8305/src/lib/methods.ts#L206">lib/methods.ts:206</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -365,13 +365,13 @@
 					<a name="fetchuser" class="tsd-anchor"></a>
 					<h3>fetch<wbr>User</h3>
 					<ul class="tsd-signatures tsd-kind-function">
-						<li class="tsd-signature tsd-kind-icon">fetch<wbr>User<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="interfaces/user.html" class="tsd-signature-type" data-tsd-kind="Interface">User</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">fetch<wbr>User<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="interfaces/user.html" class="tsd-signature-type" data-tsd-kind="Interface">User</a><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/91e527d/src/lib/methods.ts#L226">lib/methods.ts:226</a></li>
+									<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/07c8305/src/lib/methods.ts#L227">lib/methods.ts:227</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -381,8 +381,9 @@
 								<dl class="tsd-comment-tags">
 									<dt>example</dt>
 									<dd><p>Fetch a user</p>
-										<pre><code class="language-typescript"><span style="color: #795E26">fetchUser</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;maruf99&#039;</span><span style="color: #000000">)</span>
+										<pre><code class="language-typescript"><span style="color: #795E26">fetchUser</span><span style="color: #000000">(</span><span style="color: #A31515">&#039;some-user&#039;</span><span style="color: #000000">)</span>
 <span style="color: #000000">   .</span><span style="color: #795E26">then</span><span style="color: #000000">(</span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #001080">log</span><span style="color: #000000">)</span>
+<span style="color: #000000">   </span><span style="color: #008000">// Will error if the user is not found</span>
 <span style="color: #000000">   .</span><span style="color: #795E26">catch</span><span style="color: #000000">(</span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #001080">error</span><span style="color: #000000">);</span>
 </code></pre>
 									</dd>
@@ -397,7 +398,7 @@
 									</div>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="interfaces/user.html" class="tsd-signature-type" data-tsd-kind="Interface">User</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="interfaces/user.html" class="tsd-signature-type" data-tsd-kind="Interface">User</a><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -411,7 +412,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/91e527d/src/lib/methods.ts#L184">lib/methods.ts:184</a></li>
+									<li>Defined in <a href="https://github.com/maruf99/comicgeeks/blob/07c8305/src/lib/methods.ts#L184">lib/methods.ts:184</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
