feat: add content to site

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 		<meta name="theme-color" content="#e2232b" />
 		<meta property="og:title" content="Maruf" />
-		<meta property="og:description" content="Maruf's Website" />
+		<meta property="og:description" content="Maruf's Portfolio Website" />
 		<meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" />
 		<meta property="og:type" content="website" />
 	</head>
